--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
-    "dev": "rollup -cw --config tools/rollup.config.mjs",
+    "dev": "rollup -c tools/rollup.config.mjs -w",
     "build": "rollup -c tools/rollup.config.mjs",
     "serve": "serve dist"
   },
   "dependencies": {
-    "babylonjs": "latest"
+    "@babylonjs/core": "latest"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "latest",
